@@ -1,5 +1,12 @@
 2008-04-16  Daniel Steffen  <das@users.sourceforge.net>
 
+	* generic/tclInt.h:		make stubs tables 'static const' and
+	* generic/tclStubInit.c:	export only module-scope pointers to
+	* generic/tclStubLib.c:		the main stubs tables (for package
+	* tools/genStubs.tcl:		initialization). [Patch 1938497]
+	* generic/tclBasic.c (Tcl_CreateInterp):
+	* generic/tclTomMathInterface.c (TclTommath_Init):
+
 	* generic/tclInt.h:		revise Tcl_SetNotifier() to use a
 	* generic/tclNotify.c:		module-scope hooks table instead of
 	* generic/tclStubInit.c:	runtime stubs-table modification;
